--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
+        <div class="container">
     <nav class="navi">  
       <a href="./index.html" class="logo">Web<span class="accent">Studio</span></a>
       <ul>
@@ -41,19 +42,22 @@
                 <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
            </li>
            <li>
-
                 <a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a>
             </li>
     </ul>
     </address>
+    </div>
     </header>
     <main>
         <section class="first-part">
+    <div class="container">
             <h1 class="inscription">Effective Solutions for Your Business</h1>
             <button type="button" class="push">Order Service</button>
+        </div>
         </section>
 
         <section>
+        <div class="container">
             <h2>Features</h2>
             <ul class="list">
                 <li>
@@ -74,9 +78,11 @@
                     <p class="benef-s">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
+           </div>
         </section>
 
         <section class="third-part">
+            <div class="container">
             <h2 class="titles">Our Team</h2>
         <ul class="list">
             <li class="list-third">
@@ -100,9 +106,11 @@
                 <p class="ppl-dscr">UI Designer</p>
             </li>
         </ul>
+        </div>
     </section>
 
     <section>
+        <div class="container">
         <h2 class="titles-four">Our Portfolio</h2>
         <ul class="list">
             <li class="part-of-list">
@@ -136,14 +144,17 @@
                 <p class="dscr">Marketing</p>
             </li>
         </ul>
+        </div>
     </section>
     </main>
 
     <footer class="under">
+    <div class="container">
     <a href="./index.html" class="logo">Web<span class="accent-foot">Studio</span></a>
       <p class="foot-parag">Increase the flow of customers and
         sales for your business with digital
         marketing & growth solutions.</p>
+    </div>
     </footer>
 </body>
 </html>
