--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Guides:wght@400..700&family=Raleway:ital,wght@0,700;1,700&family=Roboto:wght@100;400;500;700&display=swap"
             rel="stylesheet">
     <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.css" />
+    href="<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" crossorigin="anonymous" referrerpolicy="no-referrer" />" />
     <title>WebStudio</title>
     <link rel="stylesheet" href="./css/styles.css"/>
 </head>
@@ -37,7 +37,7 @@
       </ul>
     </nav>
     <address class="contacts"> 
-        <ul>
+        <ul class="contacts-list">
             <li>
                 <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
            </li>
@@ -56,9 +56,9 @@
         </div>
         </section>
 
-        <section>
-        <div class="container">
+        <section class="second-part">
             <h2>Features</h2>
+         <div class="container">
             <ul class="list">
                 <li>
                     <h3 class="benefits">Strategy</h3>
