--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
 <body>
     <header class="header">
-        <div class="container">
+        <div class="container header-container">
     <nav class="navi">  
-      <a href="./index.html" class="logo">Web<span class="accent">Studio</span></a>
-      <ul>
+      <a href="./index.html" class="logo header-logo">Web<span class="accent">Studio</span></a>
+      <ul class="navili">
         <li>
             <a href="/" class="link">Studio</a>
         </li>
