--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 
         <section class="second-part">
         <div class="container">
-            <h2>Features</h2>
-            <ul class="list">
-                <li>
+            <h2 class="visually-hidden">Features</h2>
+            <ul class="list two-list">
+                <li class="features-dscr">
                     <h3 class="benefits">Strategy</h3>
                     <p class="benef-s">Our goal is to identify the business
                     problem to walk away with the perfect and creative solution.</p>
@@ -84,11 +84,13 @@
         <section class="third-part">
             <div class="container">
             <h2 class="titles">Our Team</h2>
-        <ul class="list">
+        <ul class="list three-list">
             <li class="list-third">
                 <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" height="260" />
+                <div class="employee">
                 <h3 class="people">Mark Guerrero</h3>
                 <p class="ppl-dscr">Product Designer</p>
+                </div>
             </li>
             <li class="list-third">
                 <img src="./images/tom.jpg" alt="Tom Ford" width="264" height="260"/>
