--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
                     <p class="benef-s">Our goal is to identify the business
                     problem to walk away with the perfect and creative solution.</p>
                 </li>
-                <li>
+                <li class="features-dscr">
                     <h3 class="benefits">Punctuality</h3>
                     <p class="benef-s">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
-                <li>
+                <li class="features-dscr">
                     <h3 class="benefits">Diligence</h3>
                     <p class="benef-s">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
-                <li>
+                <li class="features-dscr">
                     <h3 class="benefits">Technologies</h3>
                     <p class="benef-s">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
@@ -94,18 +94,24 @@
             </li>
             <li class="list-third">
                 <img src="./images/tom.jpg" alt="Tom Ford" width="264" height="260"/>
+                <div class="employee">
                 <h3 class="people">Tom Ford</h3>
                 <p class="ppl-dscr">Frontend Developer</p>
+                </div>
             </li>
             <li class="list-third">
                 <img src="./images/camila.jpg" alt="Camila Garcia" width="264" height="260"/>
+                <div class="employee">
                 <h3 class="people">Camila Garcia</h3>
                 <p class="ppl-dscr">Marketing</p>
+                </div>
             </li>
             <li class="list-third">
                 <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" height="260"/>
+                <div class="employee">
                 <h3 class="people">Daniel Wilson</h3>
                 <p class="ppl-dscr">UI Designer</p>
+                </div>
             </li>
         </ul>
         </div>
