--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
     <footer class="under">
     <div class="container">
-    <a href="./index.html" class="logo">Web<span class="accent-foot">Studio</span></a>
+    <a href="./index.html" class="logo foot-logo">Web<span class="accent-foot">Studio</span></a>
       <p class="foot-parag">Increase the flow of customers and
         sales for your business with digital
         marketing & growth solutions.</p>
